# PoliCRM

./: .env.example  .flake8  .gitignore  CASE_STUDY.md  CLAUDE.md  DESIGN.md  DRAG_DROP_IMPORT_IMPLEMENTATION.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS.md  MPR.md  PHASE1_MVP_PROGRESS.md  PRIORITY1_TESTING_GUIDE.md  PRODUCT.md  README.md  ROADMAP.md  RUST_MIGRATION.md  SUMMARY.md  aec_checker.py  alembic.ini  config.example.json  crm.db  debug_stats.py  deduplicate_era.py  docker-compose.yml  re_queue_missing_era.py  requirements.txt  reset_db.sh  reset_era_db.py  run_crm.sh  test_missing_dob.py  walkthrough.md
.github/: FUNDING.yml  copilot-instructions.md
.tscanner/: config.jsonc
.tscanner/script-rules/: example-no-long-files.ts
backend-rs/: .env.example  Cargo.toml
backend-rs/migrations/: 20260525000000_initial_schema.sql  20260525000001_pii_encryption.sql  20260530000000_era_schema.sql
backend-rs/src/: api.rs  crypto.rs  main.rs  models.rs
backend-rs/src/era/: fuzzy.rs  handlers.rs  mod.rs  models.rs  parse.rs  service.rs
docs/: README.md
docs/api/: era.md  members.md  overview.md  tags.md
docs/backend/: architecture.md
docs/deployment/: docker.md
docs/frontend/: architecture.md  components.md
docs/getting-started/: configuration.md  installation.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorBoundary.tsx  FilterBar.tsx  LandingPage.css  LandingPage.test.tsx  LandingPage.tsx  Layout.tsx  MemberDetailDrawer.tsx  MemberProfile.tsx  MemberTable.tsx  MembershipBadge.test.tsx  MembershipBadge.tsx  PageHeader.test.tsx  PageHeader.tsx  Pagination.tsx  ProtectedRoute.tsx  (+3 more)
rust/: Cargo.toml
rust/migrations/: 001_initial.sql
rust/src/: lib.rs  main.rs
rust/src/aec_core/: browser.rs  checker.rs  mod.rs  models.rs  utils.rs
rust/src/api/: app.rs  auth.rs  daemon.rs  db.rs  mod.rs  rate_limiter.rs  security.rs  worker_pool.rs
rust/src/api/routes/: members.rs  mod.rs  stats.rs  tags.rs  users.rs  views.rs
rust/src/utils/: address.rs
rust/tests/: db_tests.rs
scripts/: migrate_to_postgres.py
src/aec_core/: __init__.py  browser.py  main.py  models.py  utils.py
src/api/: auth.py  database.py  dependencies.py  era_models.py  main.py  models.py  rate_limiter.py  schemas.py  security.py  worker_pool.py
src/utils/: __init__.py  convert_addresses.py
tests/: test_aec_checker.py  test_api.py  test_convert_addresses.py  test_robustness.py
(+76 files in other folders)
