[package]
name = "backend-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
axum = { version = "0.8.9", features = ["multipart"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.30"
log = "0.4"
reqwest = { version = "0.13.3", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "uuid", "chrono"] }
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
strsim = "0.11"
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
