[package]
name = "policrm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "policrm"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
thirtyfour = "0.31"
rand = "0.8"
regex = "1"
fernet = "0.2"
sha2 = "0.10"
hex = "0.4"
jsonwebtoken = "9"
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
csv = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
indicatif = "0.17"
tokio-util = "0.7"
parking_lot = "0.12"
minijinja = { version = "1", features = ["loader"] }
bytes = "1"
futures = "0.3"
base64 = "0.21"
